    fixed argument names for the makepitch function: new argument names are "degree", "alter" and "octave"
    :* operator returns null for non-positive repeat counts

- bach.expr:
    evaluation precedence of the ** operator is now right-to-left, as per the documentation (2**3**2 now returns 512, previously 64)
    evaluation precedence of the ! and ~ operators is now higher than exponentiation

- bach.roll, bach.score:
    Now Cmd+Alt+V DOES NOT OUTPUT all the parameters any longer
	Also, Alt+V is used to force the output of chord information instead of Shift+V.
    The "dblclicksendsvalues" attribute has been eliminated and replaced by the much more general "dumpplaycmd" attribute, allowing
	you to set one or more letters or mouse keys to send offline values.
		Backward compatibility should be preserved, meaning that the new attribute should already take care of the old value, 
		but check manually if possible

- bach.roll:
    MIDI import: if both markmeasures and markdivisions are on (as per default), and "bach barline" markers are present in the MIDI file, then measure barlines are not calculated
        New "importdivisions" message attribute, overriding "markdivisions"
        Fixed bug potentially producing negative durations. This has entailed removing a 1ms reduction to all durations.
    New group display mode (@showgroups) as BEAMINGS ---> this has become the default
	If you wanted to keep the old modes as default, change the attribute explicitly  
    New "dump selection ..." message for bach.roll to only output parameters for selected content.
    At the same time, the "dumpselection" message is deprecated in favor of either "dump selection playout" "plump"

- bach.score:
    Default behavior of setcursor in presence of grace notes has changed: it only accounts for grace notes in the first measure.
	You can change this by using the new attribute @nudgeforgrace, given to many messages, including: